--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
 </section>
 
 
-<section id="team" class="primary-bg">
+<!-- <section id="team" class="primary-bg">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -423,7 +423,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 
 
 <section id="testimonial" class="testimonial_bg">
