fix bad lining up thing

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 							<li>
 								<a href="#"><span><i class="fas fa-football-ball" aria-hidden="true"></i></span> 
 								<h5> Multiple Sports</h5></a>
-								<p> CBasketball, Football, Soccer, and more. We work with everything</p>
+								<p> Basketball, Football, Soccer, and more. We work with everything</p>
 							</li>
 							
 							<li>
@@ -186,7 +186,7 @@
 							
 							<li>
 								<a href="#"><span><i class="fas fa-trophy" aria-hidden="true"></i></span> 
-								<h5> Rewards You Want </h5></a>
+								<h5> Rewards </h5></a>
 								<p> By partnering with great brands, we reward you with real value</p>
 							</li>
 						</ul>
