change innovation section and remove a bunch of other sections

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 			<div class="section_heading">
 				<h2> Innovation in Your Palm </h2>
 				
-				<h4> Coast 2 Coast is the world’s first app that not only pays people to play, but allows players to put up money against others.</h4>
+				<h4> Coast 2 Coast is not only the first app that allows you to earn real money by playing basketball, but you can also take what you earned and put it up against other users. 1 on 1. Winner takes <u>ALL</u>.</h4>
 			</div>		
 				
 			<div class="col-md-6">
@@ -424,9 +424,7 @@
 		</div>
 	</div>
 </section> -->
-
-
-<section id="testimonial" class="testimonial_bg">
+<!-- <section id="testimonial" class="testimonial_bg">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -454,10 +452,8 @@
 			</div>
 		</div>
 	</div>
-</section>
-
-
-<section id="blog" class="primary-bg">
+</section> -->
+<!-- <section id="blog" class="primary-bg">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -537,7 +533,7 @@
 			</div>
 		</div>
 	</div>
-</section>
+</section> -->
 
 <section id="contact" class="contact_bg">
 	<div class="container">
@@ -607,9 +603,7 @@
 	</div>
 </section>
 
-
-
-<section class="primary-bg">
+<!-- <section class="primary-bg">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
@@ -660,8 +654,7 @@
 			</div>
 		</div>
 	</div>
-</section>
-
+</section> -->
 
 <footer class="third-bg">
 	<div class="container">
