--- a/index.html
+++ b/index.html
@@ -534,14 +534,12 @@
 	</div>
 </section> -->
 
-<section id="contact" class="contact_bg">
+<section id="contact" class="primary_bg">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
-				<div class="section_heading section_heading_2">
+				<div class="section_heading ">
 					<h2> Contact Us </h2>
-				
-					<h4>Let drop a line to us & we will be in touch soon. Here goes some simple dummy text. Lorem Ipsum is simply dummy text </h4>
 				</div>
 							
 				<div class="col-md-6">
