--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 				
 				<div class="col-md-6">
 					<div class="present_img">
-						<img src="images/c2c/Phone_in_hand-crop-bkg-2.png" alt="image">
+						<img src="images/c2c/holdphone.png" alt="image">
 					</div>
 				</div>
 				
