--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 				
 				<div class="col-md-4">
 								<div class="workng_img">
-									<img src="images/c2c/blur_edges.jpg" alt="image">
+									<img src="images/c2c/blur_edges.webp" alt="image">
 								</div>
 				</div>
 				<div class="col-md-4">
