change pricing section slightly

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 				<div class="col-md-4">	
 					<div class="table-1">
 							<div class="discount">
-								<p> FREE !!!!! </p>
+								<p class="bold" > FREE </p>
 							</div>
 						
 						<h3> Basic </h3>
@@ -278,7 +278,7 @@
 								<span class="round">
 									<h3> $0 </h3>
 									<span>
-										<p> /Month </p>
+										<p> Forever </p>
 									</span>
 								</span>
 								
