minor grammar tweaks

--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 						<li>
 							
 								<i class="fa fa-desktop" aria-hidden="true"></i> 
-								<h5> Modern design</h5>
+								<h5> Modern Design</h5>
 								We love combining old school sports with modern, world class technology.
 						</li>
 					</ul>
