--- a/index.html
+++ b/index.html
@@ -535,36 +535,81 @@
 	</div>
 </section> -->
 
+<!-- Begin Mailchimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+<!-- <div id="mc_embed_signup">
+<form action="https://coast2coastapp.us12.list-manage.com/subscribe/post?u=d3ddd2c07f70b1c1cef38c1aa&amp;id=ce8fab9637" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+    <div id="mc_embed_signup_scroll">
+	<h2>Subscribe to learn more</h2>
+<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+<div class="mc-field-group size1of2">
+	<label for="mce-MMERGE2">CONTACT NUMBER </label>
+	<input type="number" name="MMERGE2" class="" value="" id="mce-MMERGE2">
+</div>
+<div class="mc-field-group">
+	<label for="mce-EMAIL">EMAIL  <span class="asterisk">*</span>
+</label>
+	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+</div>
+<div class="mc-field-group">
+	<label for="mce-FNAME">NAME </label>
+	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+</div>
+	<div id="mce-responses" class="clear">
+		<div class="response" id="mce-error-response" style="display:none"></div>
+		<div class="response" id="mce-success-response" style="display:none"></div> -->
+	<!-- </div>    real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
+    <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d3ddd2c07f70b1c1cef38c1aa_ce8fab9637" tabindex="-1" value=""></div>
+    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+    </div>
+</form>
+</div>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[2]='MMERGE2';ftypes[2]='number';fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script> -->
+<!-- End mc_embed_signup -->
+
+
+
 <section id="contact" class="primary_bg">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-12">
 				<div class="section_heading ">
-					<h2> Contact Us </h2>
+					<h2> Subscribe </h2>
 				</div>
 
-				<div class="col-md-6">
-					<div class="contact_form">
-					<form id="message-form">
-					  <div class="form-group">
-						<label >Full Name : <span> *</span></label>
-						<input type="text" class="form-control" name="name" >
-					  </div>
+				<div class="col-md-6" id="mc_embed_signup">
+					<div class="contact_form" >
+					<form action="https://coast2coastapp.us12.list-manage.com/subscribe/post?u=d3ddd2c07f70b1c1cef38c1aa&amp;id=ce8fab9637" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						<div id="mc_embed_signup_scroll">
+							<div class="form-group">
+								<label for="mce-FNAME">Full Name : <span> *</span></label>
+								<input type="text" class="form-control" name="FNAME" id="mce-FNAME">
+							</div>
+							<div class="form-group">
+								<label for="mce-MMERGE2">Contact Number : <span> *</span></label>
+								<input name="MMERGE2" class="form-control" value="" id="mce-MMERGE2">
+							</div>
+							<div class="form-group">
+								<label for="mce-EMAIL" >Email Address : <span> *</span></label>
+								<input type="email" class="form-control required email" name="EMAIL" id="mce-EMAIL">
+							</div>
+							<div id="mce-responses" class="clear">
+								<div class="response" id="mce-error-response" style="display:none"></div>
+								<div class="response" id="mce-success-response" style="display:none"></div>
+							</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d3ddd2c07f70b1c1cef38c1aa_ce8fab9637" tabindex="-1" value=""></div>
 
-					  <div class="form-group">
-						<label >Email Address : <span> *</span></label>
-						<input type="email" class="form-control" name="email" >
-					  </div>
-
-					  <div class="form-group">
-						<label>Message <span> *</span></label>
-						<textarea class="form-textarea" rows="3" name="message"></textarea>
-					 </div>
-
-					    <div class="section_sub_btn">
-							<button class="btn btn-default" type="submit"id="form-submit">  Send Message</button>	
+							<div class="section_sub_btn">
+								<button class="btn btn-default" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Subscribe</button>	
+							</div>
 						</div>
 					</form>
+					<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[2]='MMERGE2';ftypes[2]='number';fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 					</div>
 				</div>
 
