subtitle changes and site title change

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Coast-2-Coast</title>
+    <title>Coast 2 Coast</title>
 
 	<link href="css/bootstrap.min.css" rel="stylesheet">
      <!-- CSS Custom -->
@@ -77,10 +77,10 @@
 
 				<div class="col-md-6">
 					<div class="present">
-						<h1> Get Ready for<br/><b class = "header-bold">Coast 2 Coast</b></h1> 
-						
+						<h1> Get Ready for<br/><b class = "header-bold">Coast 2 Coast</b></h1>
+
 						<h3> Get Paid to Play Sports. </h3>
-						
+
 						<div class="section_btn">
 								<a href="#"> <img src="images/c2c/google-play.png"> </a>
 								<a href="#"> <img src="images/c2c/appstore.png"> </a>
@@ -264,7 +264,7 @@
 				<div class="section_heading section_heading_2">
 					<h2> Our Pricing </h2>
 
-					<h4> We put our customers first</h4>
+					<h4> We put our customers first.</h4>
 				</div>
 
 				<div class="col-md-4">
@@ -580,6 +580,8 @@
 			<div class="col-md-12">
 				<div class="section_heading ">
 					<h2> Subscribe </h2>
+
+                    <h4> Join our mailing list to hear updates about the Coast 2 Coast app release.</h4>
 				</div>
 
 				<div class="col-md-6" id="mc_embed_signup">
@@ -605,7 +607,7 @@
 							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d3ddd2c07f70b1c1cef38c1aa_ce8fab9637" tabindex="-1" value=""></div>
 
 							<div class="section_sub_btn">
-								<button class="btn btn-default" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Subscribe</button>	
+								<button class="btn btn-default" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Subscribe</button>
 							</div>
 						</div>
 					</form>
