mailchimp docs need to stop treating me like im 3 yrs old

--- a/index.html
+++ b/index.html
@@ -20,12 +20,6 @@
     <!-- Google Fonts -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
-     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
 
 </head>
 <body>
@@ -297,9 +291,6 @@
 
 				<div class="col-md-4">
 					<div class="table-1">
-							<!-- <div class="discount">
-								<p> Save 15% </p>
-							</div> -->
 
 						<h3> Elite</h3>
 
@@ -327,9 +318,6 @@
 
 				<div class="col-md-4">
 					<div class="table-1">
-							<!-- <div class="discount">
-								<p> Save 12% </p>
-							</div> -->
 
 						<h3>Premium</h3>
 
@@ -361,219 +349,6 @@
 </section>
 
 
-<!-- <section id="team" class="primary-bg">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-
-				<div class="section_heading">
-					<h2> Team Members </h2>
-
-					<h4> We're the best professionals in this. Here goes some simple dummy text. Lorem Ipsum is simply dummy text </h4>
-				</div>
-
-				<div class="col-md-3">
-					<div class="member_detail">
-						<div class="member_img">
-							<img src="images/member_1.png" alt="image">
-						</div>
-						<div class="member_name">
-							<h5> John Capone</h5>
-							<p> Web Art Director</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-3">
-					<div class="member_detail">
-						<div class="member_img">
-							<img src="images/member_2.png" alt="image">
-						</div>
-						<div class="member_name">
-							<h5> Marlon Leend</h5>
-							<p> Head Phographer</p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-3">
-					<div class="member_detail">
-						<div class="member_img">
-							<img src="images/member_3.png" alt="image">
-						</div>
-						<div class="member_name">
-							<h5> Robert Son</h5>
-							<p> Marketing Director </p>
-						</div>
-					</div>
-				</div>
-
-				<div class="col-md-3">
-					<div class="member_detail">
-						<div class="member_img">
-							<img src="images/member_4.png" alt="image">
-						</div>
-						<div class="member_name">
-							<h5> John Capone</h5>
-							<p> Web Art Director</p>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-</section> -->
-<!-- <section id="testimonial" class="testimonial_bg">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<div class="section_heading section_heading_2">
-					<h2>Testimonial </h2>
-
-					<h4> We ensure quality & support. People love us & we love them. Here goes some simple dummy text.</h4>
-				</div>
-
-				<div class="testimonial_slide">
-					<div class="testi_detail">
-						<div class="testi_img">
-							<img src="images/testi_img1.png" alt="image">
-
-								<h5> John Capone</h5>
-								<p> Web Art Director</p>
-						</div>
-
-						<div class="testi-text">
-							<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mi odio, gravida at turpis et, porta bibendum justo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam mi odio, gravida at turpis et, porta bibendum justo. </p>
-						</div>
-					</div>
-
-				</div>
-			</div>
-		</div>
-	</div>
-</section> -->
-<!-- <section id="blog" class="primary-bg">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-
-				<div class="section_heading">
-					<h2> Our Latest Blog</h2>
-
-					<h4> Will we have a blog? Dummy text of the printing and typesetting industry. </h4>
-				</div>
-
-
-				<div class="col-md-4">
-					<article class="our_blog">
-						<div class="blog_image">
-							<img src="images/blog-img1.png" alt="image">
-						</div>
-
-						<div class="blog_detail">
-							<div class="category_heading">
-								<a href="#"> <h6> Marketing </h6> </a>
-								<a href="#"> <h5> Lorem Ipsum is simply dummy text of the printing. </h5> </a>
-
-								<ul>
-									<li> <i class="fa fa-clock-o" aria-hidden="true"></i> 20 March 2016 </li>
-									<li> <a href="#"> <i class="fa fa-comments-o" aria-hidden="true"></i> Comments </a> </li>
-								</ul>
-
-								<a href="#" class="read_more"> <p> Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </p> </a>
-							</div>
-						</div>
-					</article>
-				</div>
-
-				<div class="col-md-4">
-					<article class="our_blog">
-						<div class="blog_image">
-							<img src="images/blog-img2.png" alt="image">
-						</div>
-
-						<div class="blog_detail">
-							<div class="category_heading">
-								<a href="#"> <h6> Marketing </h6> </a>
-								<a href="#"> <h5> Lorem Ipsum is simply dummy text of the printing. </h5> </a>
-
-								<ul>
-									<li>  <i class="fa fa-clock-o" aria-hidden="true"></i>  20 March 2016 </li>
-									<li> <a href="#">  <i class="fa fa-comments-o" aria-hidden="true"></i> Comments </a> </li>
-								</ul>
-
-								<a href="#"  class="read_more"> <p> Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </p> </a>
-							</div>
-						</div>
-					</article>
-				</div>
-
-				<div class="col-md-4">
-					<article class="our_blog">
-						<div class="blog_image">
-							<img src="images/blog-img3.png" alt="image">
-						</div>
-
-						<div class="blog_detail">
-							<div class="category_heading">
-								<a href="#"> <h6> Marketing </h6> </a>
-								<a href="#"> <h5> Lorem Ipsum is simply dummy text of the printing. </h5> </a>
-
-								<ul>
-									<li>  <i class="fa fa-clock-o" aria-hidden="true"></i>  20 March 2016 </li>
-									<li> <a href="#">  <i class="fa fa-comments-o" aria-hidden="true"></i> Comments </a> </li>
-								</ul>
-
-								<a href="#"  class="read_more"> <p> Read More <i class="fa fa-long-arrow-right" aria-hidden="true"></i> </p> </a>
-							</div>
-						</div>
-					</article>
-				</div>
-			</div>
-		</div>
-	</div>
-</section> -->
-
-<!-- Begin Mailchimp Signup Form -->
-<link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
-<style type="text/css">
-	#mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
-	/* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
-	   We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
-</style>
-<!-- <div id="mc_embed_signup">
-<form action="https://coast2coastapp.us12.list-manage.com/subscribe/post?u=d3ddd2c07f70b1c1cef38c1aa&amp;id=ce8fab9637" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-	<h2>Subscribe to learn more</h2>
-<div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
-<div class="mc-field-group size1of2">
-	<label for="mce-MMERGE2">CONTACT NUMBER </label>
-	<input type="number" name="MMERGE2" class="" value="" id="mce-MMERGE2">
-</div>
-<div class="mc-field-group">
-	<label for="mce-EMAIL">EMAIL  <span class="asterisk">*</span>
-</label>
-	<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-</div>
-<div class="mc-field-group">
-	<label for="mce-FNAME">NAME </label>
-	<input type="text" value="" name="FNAME" class="" id="mce-FNAME">
-</div>
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div> -->
-	<!-- </div>    real people should not fill this in and expect good things - do not remove this or risk form bot signups -->
-    <!-- <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d3ddd2c07f70b1c1cef38c1aa_ce8fab9637" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-    </div>
-</form>
-</div>
-<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[2]='MMERGE2';ftypes[2]='number';fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script> -->
-<!-- End mc_embed_signup -->
-
-
-
 <section id="contact" class="primary_bg">
 	<div class="container">
 		<div class="row">
@@ -582,45 +357,30 @@
 					<h2> Subscribe </h2>
 				</div>
 
-				<div class="col-md-6" id="mc_embed_signup">
-					<div class="contact_form" >
-					<form action="https://coast2coastapp.us12.list-manage.com/subscribe/post?u=d3ddd2c07f70b1c1cef38c1aa&amp;id=ce8fab9637" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-						<div id="mc_embed_signup_scroll">
+				<div class="col-md-6">
+					<div class="contact_form">
+						<form id="message-form">
+
 							<div class="form-group">
-								<label for="mce-FNAME">Full Name : <span> *</span></label>
-								<input type="text" class="form-control" name="FNAME" id="mce-FNAME">
+								<label >Full Name : <span> *</span></label>
+								<input type="text" class="form-control" name="FNAME" id="mce-FNAME" >
 							</div>
+
 							<div class="form-group">
-								<label for="mce-MMERGE2">Contact Number : <span> *</span></label>
-								<input name="MMERGE2" class="form-control" value="" id="mce-MMERGE2">
+								<label >Email Address : <span> *</span></label>
+								<input type="email" class="form-control" name="EMAIL" id="mce-EMAIL">
 							</div>
-							<div class="form-group">
-								<label for="mce-EMAIL" >Email Address : <span> *</span></label>
-								<input type="email" class="form-control required email" name="EMAIL" id="mce-EMAIL">
-							</div>
-							<div id="mce-responses" class="clear">
-								<div class="response" id="mce-error-response" style="display:none"></div>
-								<div class="response" id="mce-success-response" style="display:none"></div>
-							</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-							<div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_d3ddd2c07f70b1c1cef38c1aa_ce8fab9637" tabindex="-1" value=""></div>
 
 							<div class="section_sub_btn">
-								<button class="btn btn-default" type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe">Subscribe</button>	
+								<button class="btn btn-default" type="submit"id="form-submit">  Send Message</button>	
 							</div>
-						</div>
-					</form>
-					<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[2]='MMERGE2';ftypes[2]='number';fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+						</form>
 					</div>
 				</div>
 
 				<div class="col-md-6">
 					<div class="contact_text">
 						<ul>
-							<!-- <li>
-								<span><i class="fa fa-home" aria-hidden="true"></i></span>
-								<h5> 1234 Street Name, City Name, United States</h5>
-							</li> -->
-
 							<li>
 								<span><i class="fas fa-envelope" aria-hidden="true"></i></span>
 								<h5>  info@coast2coastapp.net </h5>
@@ -630,11 +390,7 @@
 								<span><i class="fa fa-phone" aria-hidden="true"></i></span>
 								<h5> (904) 463-4153 </h5>
 							</li>
-<!--
-							<li>
-								<span><i class="fa fa-fax" aria-hidden="true"></i></span>
-								<h5> (123) 123-45678 </h5>
-							</li> -->
+
 							<li>
 								 <span> <a href="https://www.facebook.com/coast2coastapp/"><i class="fab fa-facebook" aria-hidden="true"></i></a></span>
 								<h5><a href="https://www.facebook.com/coast2coastapp/">@coast2coastapp</a></h5>
@@ -644,9 +400,7 @@
 							   <h5><a href="https://www.instagram.com/coast2coastapp/">@coast2coastapp</a></h5>
 						   </li>
 						</ul>
-
 					</div>
-
 				</div>
 
 				<form action=" https://www.paypal.com/cgi-bin/webscr" method="post" target="_top" id="donate-form">
@@ -659,59 +413,6 @@
 		</div>
 	</div>
 </section>
-
-<!-- <section class="primary-bg">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-
-				<div class="col-md-4">
-					<div class="subscribe">
-						<h3> Stay informed with our newsletter</h3>
-
-						<h6> Subscribe to our email newsletter for useful tips and resources. </h6>
-
-						<div class="subscribe_form">
-						<form>
-						  <div class="form-group">
-							<input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email Address" >
-						  </div>
-						</form>
-
-						<div class="section_sub_btn">
-							<button class="btn btn-default" type="submit">  Subscribe </button>
-						</div>
-					</div>
-
-					</div>
-
-
-				</div>
-
-				<div class="col-md-4">
-								<div class="workng_img">
-									<img src="images/contact_img.png" alt="image">
-								</div>
-				</div>
-
-				<div class="col-md-4">
-					<div class="subscribe">
-						<h3> Download App Now </h3>
-
-						<h6> Select your device platform and get download started </h6>
-
-						<div class="section_btn">
-									<button class="btn btn-default" type="submit"> <i class="fa fa-apple" aria-hidden="true"></i> App Store</button>
-
-								    <span><button class="btn btn-default" type="submit"><i class="fa fa-android" aria-hidden="true"></i> Play Store</button></span>
-						</div>
-					</div>
-				</div>
-
-			</div>
-		</div>
-	</div>
-</section> -->
 
 <footer class="third-bg">
 	<!-- <div class="container">
@@ -735,7 +436,6 @@
 	</div> -->
 
 	<div class="footer_bottom fourth-bg">
-		<!-- Keep Footer Credit Links Intact -->
           <p> 2018 &copy; Copyright Coast 2 Coast. Created by <a href="https://www.ballpointcg.com/">Ballpoint Consulting</a>. </p>
         <a href="#" class="backtop"> ^ </a>
     </div>
