make buttons link to contact section

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 						<h3> Get Paid to Play Sports. </h3>
 
 						<div class="section_btn">
-								<a href="#"> <img src="images/c2c/google-play.png"> </a>
-								<a href="#"> <img src="images/c2c/appstore.png"> </a>
+								<a href="#contact"> <img src="images/c2c/google-play.png"> </a>
+								<a href="#contact"> <img src="images/c2c/appstore.png"> </a>
 						</div>
 					</div>
 				</div>
@@ -284,7 +284,7 @@
 						</ul>
 
 						<div class="section_sub_btn">
-							<button class="btn btn-default" type="submit"> <i class="fa fa-cart-plus" aria-hidden="true"></i> Order Now</button>
+							<a href="#contact" class="btn btn-default" type="submit"> <i class="fa fa-cart-plus" aria-hidden="true"></i> Order Now</a>
 						</div>
 					</div>
 				</div>
@@ -311,7 +311,7 @@
 						</ul>
 
 						<div class="section_sub_btn">
-							<button class="btn btn-default" type="submit"> <i class="fa fa-cart-plus" aria-hidden="true"></i> Order Now</button>
+							<a href="#contact" class="btn btn-default" type="submit"> <i class="fa fa-cart-plus" aria-hidden="true"></i> Order Now</a>
 						</div>
 					</div>
 				</div>
@@ -339,7 +339,7 @@
 						</ul>
 
 						<div class="section_sub_btn">
-							<button class="btn btn-default" type="submit"> <i class="fa fa-cart-plus" aria-hidden="true"></i> Order Now</button>
+							<a href="#contact" class="btn btn-default" type="submit"> <i class="fa fa-cart-plus" aria-hidden="true"></i> Order Now</a>
 						</div>
 					</div>
 				</div>
