--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 
 				<div class="col-md-6">
 					<div class="features_img pull-left">
-						<img src="images/min/3ScreenIsolated.png" alt="image">
+						<img src="images/min/3-Screen-new.jpg" alt="image">
 					</div>
 				</div>
 
