--- a/index.html
+++ b/index.html
@@ -373,6 +373,14 @@
 								<input type="email" class="form-control" name="EMAIL" id="mce-EMAIL">
 							</div>
 
+							<div class="form-group">
+								<label >Phone Number : <span> *</span></label> <span class="small-meta nowrap">(###) ###-####</span>
+								<br/>
+								<span class="phonearea">(<input class="form-control-2 " pattern="[0-9]*" id="mce-PHONE-area" name="PHONE[area]" maxlength="3" size="3" value="" type="text">)</span>
+								<span class="phonedetail1"><input class="form-control-2 " pattern="[0-9]*" id="mce-PHONE-detail1" name="PHONE[detail1]" maxlength="3" size="3" value="" type="text"></span> -
+								<span class="phonedetail2"><input class="form-control-2" pattern="[0-9]*" id="mce-PHONE-detail2" name="PHONE[detail2]" maxlength="4" size="4" value="" type="text"></span>
+							</div>
+
 							<div class="section_sub_btn">
 								<button class="btn btn-default" type="submit"id="form-submit"> Subscribe</button>	
 							</div>
