added phone selection

--- a/index.html
+++ b/index.html
@@ -380,6 +380,15 @@
 								<span class="phonedetail1"><input class="form-control-2 " pattern="[0-9]*" id="mce-PHONE-detail1" name="PHONE[detail1]" maxlength="3" size="3" value="" type="text"></span> -
 								<span class="phonedetail2"><input class="form-control-2" pattern="[0-9]*" id="mce-PHONE-detail2" name="PHONE[detail2]" maxlength="4" size="4" value="" type="text"></span>
 							</div>
+							
+							<div class="form-group">
+								<label >What phone do you use? <span> *</span></label>
+
+								<ul class="form-ul"><li><input type="radio" value="iPhone" name="PTYPE" id="mce-PTYPE-0"><label class="ul-label" for="mce-PTYPE-0">iPhone</label></li>
+								<li><input type="radio" value="Android" name="PTYPE" id="mce-PTYPE-1"><label class="ul-label"  for="mce-PTYPE-1">Android</label></li>
+								<li><input type="radio" value="Other" name="PTYPE" id="mce-PTYPE-2"><label class="ul-label"  for="mce-PTYPE-2">Other</label></li>
+								</ul>
+							</div>
 
 							<div class="section_sub_btn">
 								<button class="btn btn-default" type="submit"id="form-submit"> Subscribe</button>	
