functional subscription form

--- a/index.html
+++ b/index.html
@@ -390,6 +390,11 @@
 								</ul>
 							</div>
 
+							<div class="form-group">
+								<label >What are your favorite sports?</label>
+								<input type="text" value="" name="SPORTS" class="form-control" id="mce-SPORTS">
+							</div>
+
 							<div class="section_sub_btn">
 								<button class="btn btn-default" type="submit"id="form-submit"> Subscribe</button>	
 							</div>
