--- a/index.html
+++ b/index.html
@@ -374,14 +374,6 @@
 							</div>
 
 							<div class="form-group">
-								<label >Phone Number : <span> *</span></label> <span class="small-meta nowrap">(###) ###-####</span>
-								<br/>
-								<span class="phonearea">(<input class="form-control-2 " pattern="[0-9]*" id="mce-PHONE-area" name="PHONE[area]" maxlength="3" size="3" value="" type="text">)</span>
-								<span class="phonedetail1"><input class="form-control-2 " pattern="[0-9]*" id="mce-PHONE-detail1" name="PHONE[detail1]" maxlength="3" size="3" value="" type="text"></span> -
-								<span class="phonedetail2"><input class="form-control-2" pattern="[0-9]*" id="mce-PHONE-detail2" name="PHONE[detail2]" maxlength="4" size="4" value="" type="text"></span>
-							</div>
-							
-							<div class="form-group">
 								<label >What phone do you use? <span> *</span></label>
 
 								<ul class="form-ul"><li><input type="radio" value="iPhone" name="PTYPE" id="mce-PTYPE-0"><label class="ul-label" for="mce-PTYPE-0">iPhone</label></li>
@@ -390,6 +382,14 @@
 								</ul>
 							</div>
 
+							<div class="form-group">
+								<label >Phone Number : </label>
+								<br/>
+								<span class="phonearea">(<input class="form-control-2 " pattern="[0-9]*" id="mce-PHONE-area" name="PHONE[area]" maxlength="3" size="3" value="" type="text">)</span>
+								<span class="phonedetail1"><input class="form-control-2 " pattern="[0-9]*" id="mce-PHONE-detail1" name="PHONE[detail1]" maxlength="3" size="3" value="" type="text"></span> -
+								<span class="phonedetail2"><input class="form-control-2" pattern="[0-9]*" id="mce-PHONE-detail2" name="PHONE[detail2]" maxlength="4" size="4" value="" type="text"></span>
+							</div>
+							
 							<div class="form-group">
 								<label >What are your favorite sports?</label>
 								<input type="text" value="" name="SPORTS" class="form-control" id="mce-SPORTS">
