change to subscribe

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 									<li><a href="#home" class="js-target-scroll">Home</a></li>
 									<li><a href="#about" class="js-target-scroll">About</a></li>
 									<li><a href="#pricing" class="js-target-scroll">Pricing</a></li>
-									<li><a href="#contact" class="js-target-scroll">Contact</a></li>
+									<li><a href="#contact" class="js-target-scroll">Subscribe</a></li>
 								</ul>
 							</div>
 						</nav>
