Change feature subtitle slightly

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 
 					<div class="how_it_work_m text-right">
 						<a href="#"> <i class="far fa-clock" aria-hidden="true"></i> </a>
-						<a href="#"> <h5>Keep Track of How Long You Play</h5> </a>
+						<a href="#"> <h5>Count How Long You Play</h5> </a>
 						<p>Keep an eye on how your progress. See how much more athletic you’ve become. </p>
 					</div>
 				</div>
@@ -381,14 +381,14 @@
 								<span class="phonedetail1"><input class="form-control-2 " pattern="[0-9]*" id="mce-PHONE-detail1" name="PHONE[detail1]" maxlength="3" size="3" value="" type="text"></span> -
 								<span class="phonedetail2"><input class="form-control-2" pattern="[0-9]*" id="mce-PHONE-detail2" name="PHONE[detail2]" maxlength="4" size="4" value="" type="text"></span>
 							</div>
-							
+
 							<div class="form-group">
 								<label >What are your favorite sports?</label>
 								<input type="text" value="" name="SPORTS" class="form-control" id="mce-SPORTS">
 							</div>
 
 							<div class="section_sub_btn">
-								<button class="btn btn-default" type="submit"id="form-submit"> Subscribe</button>	
+								<button class="btn btn-default" type="submit"id="form-submit"> Subscribe</button>
 							</div>
 						</form>
 					</div>
