--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 	</div> -->
 
 	<div class="footer_bottom fourth-bg">
-          <p> 2018 &copy; Copyright Coast 2 Coast. Created by <a href="https://www.ballpointcg.com/">Ballpoint Consulting</a>. </p>
+          <p> 2018 &copy; Copyright Coast 2 Coast. Created by <a href="https://www.ballpointcg.com/">Ballpoint CG</a>. </p>
         <a href="#" class="backtop"> ^ </a>
     </div>
 
