implemented google ads

--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
 	<link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700' rel='stylesheet' type='text/css'>
 	<link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
 
+	<!-- Ads by Google -->
+	<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+	<script>
+		(adsbygoogle = window.adsbygoogle || []).push({
+			google_ad_client: "ca-pub-1080583500771731",
+			enable_page_level_ads: true
+		});
+	</script>
 </head>
 <body>
 
