open ballpoint cg reference in new tab

--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 	</div> -->
 
 	<div class="footer_bottom fourth-bg">
-          <p> 2018 &copy; Copyright Coast 2 Coast. Created by <a href="https://www.ballpointcg.com/">Ballpoint CG</a>. </p>
+          <p> 2019 &copy; Copyright Coast 2 Coast. Created by <a href="https://www.ballpointcg.com/" target="_blank">Ballpoint CG</a>. </p>
         <a href="#" class="backtop"> ^ </a>
     </div>
 
