--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 				<div class="col-md-6">
 					<div class="present_img">
-						<img src="images/min/holdphone.png" alt="image">
+						<img src="images/min/new/hold_new-min.png" alt="image">
 					</div>
 				</div>
 
@@ -165,7 +165,7 @@
 
 				<div class="col-md-6">
 					<div class="features_img pull-left">
-						<img src="images/min/3-Screen-new.jpg" alt="image">
+						<img src="images/min/new/3screen_new-min.jpg" alt="image">
 					</div>
 				</div>
 
@@ -212,11 +212,11 @@
 
 				<div class="col-md-7">
 					<div class="services_img">
-						<img src="images/min/ScreenshotOne-crop.png" alt="image-1">
+						<img src="images/min/new/challenge_results_new-min.png" alt="image-1">
 					</div>
 
 					<div class="services_img_n">
-						<img src="images/min/ScreenshotTwo-crop-4.png" alt="image-1">
+						<img src="images/min/new/challenge_rules_new-min.png" alt="image-1">
 					</div>
 				</div>
 
