updated map screen pic

--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
 
 				<div class="col-md-4">
 								<div class="workng_img">
-									<img src="images/min/blur_edges.jpg" alt="image">
+									<img src="images/min/new/map_screen.jpg" alt="image">
 								</div>
 				</div>
 				<div class="col-md-4">
