--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 
 			<div class="section_heading">
 				<h2> Innovation in Your Palm </h2>
-
-				<h4> Coast 2 Coast is not only the first app that allows you to earn real money by playing basketball, but you can also take what you earned and put it up against other users. 1 on 1. Winner takes <u>ALL</u>.</h4>
+				<img src="images/words.png" alt="image">
+				<br>
 			</div>
 
 			<div class="col-md-6">
@@ -135,7 +135,7 @@
 
 								<i class="far fa-money-bill-alt" aria-hidden="true"></i>
 								<h5> Earn Real Money</h5>
-								Challenge other users head to head in the app and take their money when you beat them.
+								Challenge other users head to head and put your athletic skills to the test.
 
 						</li>
 
@@ -150,7 +150,7 @@
 
 								<i class="fa fa-user" aria-hidden="true"></i>
 								<h5> Leaderboard</h5>
-								Let your city know who's the best athlete as they watch your name shoot up the leaderboards.
+								Let your city know your name as they watch it shoot up the leaderboards.
 						</li>
 
 						<li>
@@ -165,7 +165,7 @@
 
 				<div class="col-md-6">
 					<div class="features_img pull-left">
-						<img src="images/min/new/3screen_new-min.jpg" alt="image">
+						<img src="images/min/new/3screen_new-min.png" alt="image">
 					</div>
 				</div>
 
@@ -253,7 +253,7 @@
 
 				<div class="col-md-4">
 								<div class="workng_img">
-									<img src="images/min/new/map_screen.jpg" alt="image">
+									<img src="images/min/new/map_screen.png" alt="image">
 								</div>
 				</div>
 				<div class="col-md-4">
@@ -317,7 +317,7 @@
 
 							<div class="price_month_m">
 								<span class="round">
-									<h3> $19 </h3>
+									<h3> $5 </h3>
 									<span>
 										<p> One Time </p>
 									</span>
@@ -339,11 +339,11 @@
 
 						<h3>Premium</h3>
 
-							<div class="price_month">
+							<div class="price_month_m">
 								<span class="round">
-									<h3> $9 </h3>
+									<h3> $9.99 </h3>
 									<span>
-										<p> /Month </p>
+										<p> One Time </p>
 									</span>
 								</span>
 
@@ -354,6 +354,7 @@
 							<li> Earn Rewards 2x Faster</li>
 							<li> Fully Customize your Experience </li>
 							<li> Create and Join Teams</li>
+							<li> Link your work or rectrational team to the app</li>
 						</ul>
 
 					</div>
