Update and rename c2c.php to c2c.html

--- a/c2c.html
+++ b/c2c.html
@@ -7,6 +7,6 @@
 
 <body>
 <p>Coast 2 Coast</p>
-<p>&nbsp;</p>
+<iframe src="https://www.coast2coastapp.net/" height="200" width="300"></iframe>
 </body>
 </html>
