--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 				<div class="col-md-6">
 					<div class="present_img">
-						<img src="images/min/new/hold_new-min.png" alt="image">
+						<img src="images/banner.png" alt="image">
 					</div>
 				</div>
 
@@ -135,7 +135,7 @@
 
 								<i class="far fa-money-bill-alt" aria-hidden="true"></i>
 								<h5> Earn Real Money</h5>
-								Challenge other users head to head and put your athletic skills to the test.
+								4 different ways, 2 Singleplayer, 2 Multiplayer, to start earning even if nobody else has the app.
 
 						</li>
 
@@ -143,14 +143,14 @@
 
 								<i class="fas fa-pencil-alt" aria-hidden="true"></i>
 								<h5>Track Wins</h5>
-								Scout your opponents by checking out their profile information and their win-loss record.
+								Complete control of your athletic progression: scout opponents, view your achievements, & view your highlights
 						</li>
 
 						<li>
 
 								<i class="fa fa-user" aria-hidden="true"></i>
 								<h5> Leaderboard</h5>
-								Let your city know your name as they watch it shoot up the leaderboards.
+								What’s the point of improving your game if nobody can see it? We got you covered with leaderboards.
 						</li>
 
 						<li>
@@ -165,7 +165,7 @@
 
 				<div class="col-md-6">
 					<div class="features_img pull-left">
-						<img src="images/min/new/3screen_new-min.png" alt="image">
+						<img src="images/innovation.png" alt="image">
 					</div>
 				</div>
 
@@ -182,28 +182,28 @@
 				<div class="section_heading section_heading_2">
 					<h2> Delve into a New Way to Play </h2>
 
-					<h4> Coast 2 Coast fills a gap that no other app can. We encourage young, old, and professional to play more.</h4>
+					<h4>Coast 2 Coast lets you earn money every time you step out the door.</h4>
 				</div>
 
 				<div class="col-md-5 pull-right">
 					<div class="services_detail">
 						<ul>
 							<li>
-								<a href="#"><span><i class="fas fa-football-ball" aria-hidden="true"></i></span>
+								<a><span><i class="fas fa-football-ball" aria-hidden="true"></i></span>
 								<h5>Multiple Sports</h5></a>
-								<p>Basketball, Football, Soccer, and more. We work with everything.</p>
+								<p>Including Basketball, Football, & Soccer with more well on the way.</p>
 							</li>
 
 							<li>
-								<a href="#"><span class="services_detail_city"><i class="fas fa-city"aria-hidden="true"></i></span>
+								<a><span class="services_detail_city"><i class="fas fa-city"aria-hidden="true"></i></span>
 								<h5>Any City </h5></a>
 								<p>Like our motto, we encourage you to challenge your city.</p>
 							</li>
 
 							<li>
-								<a href="#"><span class="services_detail_trophy"><i class="fas fa-trophy" aria-hidden="true"></i></span>
+								<a><span class="services_detail_trophy"><i class="fas fa-trophy" aria-hidden="true"></i></span>
 								<h5>Rewards </h5></a>
-								<p>By partnering with great brands, we reward you with real value.</p>
+								<p>Cash out at any time after you reach $5.</p>
 							</li>
 						</ul>
 
@@ -212,12 +212,12 @@
 
 				<div class="col-md-7">
 					<div class="services_img">
-						<img src="images/min/new/challenge_results_new-min.png" alt="image-1">
+						<img src="images/delve.png" alt="image-1">
 					</div>
 
-					<div class="services_img_n">
+					<!-- <div class="services_img_n">
 						<img src="images/min/new/challenge_rules_new-min.png" alt="image-1">
-					</div>
+					</div> -->
 				</div>
 
 			</div>
@@ -234,7 +234,7 @@
 				<div class="section_heading">
 					<h2>A Personalized Experience </h2>
 
-					<h4> Our app caters to the user’s experience. We focus on what it means to be an athlete before we consider what it means to be a company.</h4>
+					<h4> Built by athletes, we focus on what it means to be an athlete before we consider what it means to be a company.</h4>
 				</div>
 
 				<div class="col-md-4">
@@ -247,13 +247,13 @@
 					<div class="how_it_work_m text-right">
 						<a href="#"> <i class="far fa-clock" aria-hidden="true"></i> </a>
 						<a href="#"> <h5>Count How Long You Play</h5> </a>
-						<p>Keep an eye on how your progress. See how much more athletic you’ve become. </p>
+						<p>Measure your progression with detailed scouting reports seeing exactly where you need to improve your game. </p>
 					</div>
 				</div>
 
 				<div class="col-md-4">
 								<div class="workng_img">
-									<img src="images/min/new/map_screen.png" alt="image">
+									<img src="images/personalized.png" alt="image">
 								</div>
 				</div>
 				<div class="col-md-4">
@@ -266,7 +266,7 @@
 					<div class="how_it_work_m text-left">
 						<a href="#"> <i class="far fa-heart" aria-hidden="true"></i> </a>
 						<a href="#"> <h5> Keep Track of Victories </h5> </a>
-						<p> See how well you stack up against others in your city. Watch as you continue to improve and rack up wins. </p>
+						<p> Collect badges and achievements; but, more importantly, rack up points and wins to cash them out for awesome rewards. </p>
 					</div>
 				</div>
 			</div>
@@ -343,7 +343,7 @@
 								<span class="round">
 									<h3> $9.99 </h3>
 									<span>
-										<p> One Time </p>
+										<p> per month </p>
 									</span>
 								</span>
 
@@ -354,7 +354,7 @@
 							<li> Earn Rewards 2x Faster</li>
 							<li> Fully Customize your Experience </li>
 							<li> Create and Join Teams</li>
-							<li> Link your work or rectrational team to the app</li>
+							<li> Link your work or recreational team to the app</li>
 						</ul>
 
 					</div>
@@ -372,7 +372,7 @@
 				<div class="section_heading ">
 					<h2> Subscribe </h2>
 
-                    <h4> Join our mailing list to hear updates about the Coast 2 Coast app release.</h4>
+                    <h4> Pre-register for the app release today!</h4>
 				</div>
 
 				<div class="col-md-6">
@@ -476,7 +476,7 @@
 	</div> -->
 
 	<div class="footer_bottom fourth-bg">
-          <p> 2019 &copy; Copyright Coast 2 Coast. Created by <a href="https://www.ballpointcg.com/" target="_blank">Ballpoint CG</a>. </p>
+          <p> 2020 &copy; Copyright Coast 2 Coast. Created by <a href="https://www.ballpointcg.com/" target="_blank">Ballpoint CG</a>. </p>
         <a href="#" class="backtop"> ^ </a>
     </div>
 
