--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 						<li>
 
 								<i class="far fa-money-bill-alt" aria-hidden="true"></i>
-								<h5> Earn Real Money</h5>
-								4 different ways, 2 Singleplayer, 2 Multiplayer, to start earning even if nobody else has the app.
+								<h5>Earn Real Money</h5>
+								There are 4 different ways: 2 Singleplayer, 2 Multiplayer, to start earning even if nobody else has the app.
 
 						</li>
 
