--- a/index.html
+++ b/index.html
@@ -135,8 +135,7 @@
 
 								<i class="far fa-money-bill-alt" aria-hidden="true"></i>
 								<h5>Earn Real Money</h5>
-								There are 4 different ways: 2 Singleplayer, 2 Multiplayer, to start earning even if nobody else has the app.
-
+								4 different ways: 2 Singleplayer, 2 Multiplayer, to start earning even if nobody else has the app.
 						</li>
 
 						<li>
